carousel alignment fixed

--- a/components/EmbalaCarousel/embla.css
+++ b/components/EmbalaCarousel/embla.css
@@ -1,5 +1,5 @@
 .embla {
-    max-width: 100rem;
+    max-width: 50rem;
     margin: auto;
     --slide-height: 24rem;
     --slide-spacing: 1rem;
@@ -30,21 +30,21 @@
   }
   .embla__slide {
     min-width: 0;
-    /* flex: 0 0 var(--slide-size); */
+    flex: 0 0 var(--slide-size);
     padding-left: var(--slide-spacing);
   }
-  /* @media (min-width: 750px) {
+  @media (min-width: 750px) {
     .embla__slide {
       flex: 0 0 var(--slide-size-sm);
       padding-left: var(--slide-spacing-sm);
     }
-  } */
-  /* @media (min-width: 1200px) {
+  } 
+   @media (min-width: 1200px) {
     .embla__slide {
       flex: 0 0 var(--slide-size-lg);
       padding-left: var(--slide-spacing-lg);
     }
-  } */
+  } 
   .embla__slide__number {
     box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
     border-radius: 1.8rem;
@@ -65,10 +65,10 @@
     align-items: center;
   }
   .embla__button {
-    /* -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
+    -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
     -webkit-appearance: none;
     appearance: none;
-    background-color: transparent; */
+    background-color: transparent;
     touch-action: manipulation;
     display: inline-flex;
     text-decoration: none;
@@ -81,14 +81,14 @@
     height: 3.6rem;
     z-index: 1;
     border-radius: 50%;
-    /* color: var(--text-body); */
+    color: var(--text-body);
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  /* .embla__button:disabled {
+  .embla__button:disabled {
     color: var(--detail-high-contrast);
-  } */
+  }
   .embla__button__svg {
     width: 35%;
     height: 35%;
